--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pandora">
-        <activity android:name=".notes_upload"></activity>
+        <activity android:name=".Tutorial"></activity>
+        <activity android:name=".notes_upload" />
         <activity android:name=".question_paper_upload" />
         <activity android:name=".DashBoard" />
         <activity android:name=".Register" />
