--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pandora">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -12,13 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pandora">
-        <activity android:name=".Tutorial"></activity>
+        <activity android:name=".AvailableSubjectNotes"></activity>
+        <activity android:name=".Tutorial" />
         <activity android:name=".notes_upload" />
         <activity android:name=".question_paper_upload" />
         <activity android:name=".DashBoard" />
         <activity android:name=".Register" />
-        <activity android:name=".AvailableSubjectResource"/>
-        <activity android:name=".AllOptions"/>
+        <activity android:name=".AvailableSubjectResource" />
+        <activity android:name=".AllOptions" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -28,5 +26,8 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
