--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,14 @@
 
     <application
         android:allowBackup="true"
-
-        android:requestLegacyExternalStorage="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pandora">
-        <activity android:name=".AvailableSubjectNotes"></activity>
+        <activity android:name=".AvailableSubjectTutorials"></activity>
+        <activity android:name=".AvailableSubjectNotes" />
         <activity android:name=".Tutorial" />
         <activity android:name=".notes_upload" />
         <activity android:name=".question_paper_upload" />
@@ -28,7 +28,8 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 </manifest>
